--- a/conditions_list_loops.ipynb
+++ b/conditions_list_loops.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -728,6 +728,8 @@
    ],
    "source": [
     "word = \"antidisestablishmentarianism\" # also try: \"Python\", \"to\"\n",
+    "\n",
+    "#word = \"Python\"\n",
     "\n",
     "if len(word) >= 4 and len(word) <= 10:\n",
     "    print(\"medium-length\")\n",
@@ -1072,10 +1074,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bipedalism\n",
+      "['antiferromagnetism', 'bipedalism']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ismlist = [\"absurdism\", \"antiferromagnetism\", \"bipedalism\", \"bimetallism\"]\n",
+    "\n",
+    "print(ismlist[-2])\n",
+    "\n",
+    "print(ismlist[1:3])\n"
+   ]
   },
   {
    "cell_type": "markdown",
