--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -723,25 +723,25 @@
     "\n",
     "--\n",
     "\n",
-    "I couldn't find any Russian puns, but I found some Russian jokes.\n",
+    "Puns can depend more on rhymes and timing than the actual context of the joke.\n",
     "\n",
-    "**Выкуренная сигарета сокращает жизнь на 2 часа, выпитая бутылка водки - на 3. Рабочий день сокращает жизнь на 8 часов.**\n",
+    "Some translate well:\n",
     "\n",
-    "Translates to:\n",
+    "**Никогда не лги рентгенологу, ведь он тебя насквозь видит.**\n",
     "\n",
-    "**One cigarette reduces your life by 2 hours, one bottle of vodka - 3 hours. Your working day reduces your life by 8 hours.**\n",
+    "Never lie to a radiologist, because he sees right through you.\n",
     "\n",
-    "Google translates at as:\n",
+    "Some do not:\n",
     "\n",
-    "**A smoked cigarette shortens life by 2 hours, a drunk bottle of vodka - by 3. A working day reduces life by 8 hours.**\n",
+    "**Как побеждают в споре немые? Безоговорочно.**\n",
     "\n",
-    "The translation is better than the complex sentence translation, but the sharpness of the joke is lost."
+    "How do the dumb win in an argument? Unconditionally."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -755,11 +755,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
