--- a/Homework/Introcl_homework_1.ipynb
+++ b/Homework/Introcl_homework_1.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "*(your text answer here: double-click to edit)*\n",
     "\n",
-    "Variable e is valid, but it shouldn't be used as a variable name. \"sum\" is a pre-defined in Python and problems can arise if it is redefined as a variable."
+    "Variable e is valid, but it shouldn't be used as a variable name. \"sum\" is a pre-defined function in Python and problems can arise if it is redefined as a variable."
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,19 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Is Digit:  \n",
+      "isdigit:  \n",
       "\n",
       "a.  <re.Match object; span=(0, 5), match='12345'>\n",
       "b.  None \n",
       "\n",
-      "Is Alpha:  \n",
+      "isalpha:  \n",
       "\n",
       "c.  <re.Match object; span=(0, 5), match='AbCDe'>\n",
       "d.  None\n"
@@ -235,7 +235,7 @@
     "\n",
     "regex_isdigit = r\"^\\d*$\"\n",
     "\n",
-    "print(\"Is Digit: \", \"\\n\")\n",
+    "print(\"isdigit: \", \"\\n\")\n",
     "\n",
     "print(\"a. \", re.search(regex_isdigit, a))\n",
     "print(\"b. \", re.search(regex_isdigit, b), \"\\n\")\n",
@@ -245,7 +245,7 @@
     "\n",
     "regex_isalpha = r\"^[A-Za-z]*$\"\n",
     "\n",
-    "print(\"Is Alpha: \", \"\\n\")\n",
+    "print(\"isalpha: \", \"\\n\")\n",
     "print(\"c. \", re.search(regex_isalpha, c))\n",
     "print(\"d. \", re.search(regex_isalpha, d))"
    ]
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,8 +286,8 @@
       "<re.Match object; span=(18, 21), match='8-)'>\n",
       "<re.Match object; span=(22, 26), match=';-))'>\n",
       "<re.Match object; span=(33, 36), match=\":')\">\n",
-      "<re.Match object; span=(56, 59), match=':-('>\n",
-      "<re.Match object; span=(32, 35), match=':-('>\n"
+      "<re.Match object; span=(21, 25), match=\":'-(\">\n",
+      "<re.Match object; span=(22, 26), match=\"8'-D\">\n"
      ]
     }
    ],
@@ -326,8 +326,8 @@
     "smiley3 = r\"(:|;|8)'?-?(\\(|\\)|\\/|D)*\"\n",
     "\n",
     "print(re.search(smiley3, \"House of the Dragon just dropped :')\"))\n",
-    "print(re.search(smiley3, tweet8))\n",
-    "print(re.search(smiley3, tweet9))"
+    "print(re.search(smiley3, \"I lost my toothbrush :'-(\"))\n",
+    "print(re.search(smiley3, \"Long flight back home 8'-D\"))"
    ]
   },
   {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
