--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "## Due: Tuesday September 21, 3pm right before class\n",
     "\n",
-    "## Your name:\n",
-    "## Your EID:\n",
+    "## Your name: Eloragh Espie\n",
+    "## Your EID: eae2273\n",
     "\n",
     "This homework comes with the following files:\n",
     "\n",
@@ -114,11 +114,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['After',\n",
+       " 'the',\n",
+       " 'glimpse',\n",
+       " 'I',\n",
+       " 'had',\n",
+       " 'had',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'Martians',\n",
+       " 'emerging',\n",
+       " 'from',\n",
+       " 'the',\n",
+       " 'cylinder',\n",
+       " 'in',\n",
+       " 'which',\n",
+       " 'they',\n",
+       " 'had',\n",
+       " 'come',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " 'earth',\n",
+       " 'from',\n",
+       " 'their',\n",
+       " 'planet',\n",
+       " 'a',\n",
+       " 'kind',\n",
+       " 'of',\n",
+       " 'fascination',\n",
+       " 'paralysed',\n",
+       " 'my',\n",
+       " 'actions',\n",
+       " 'I',\n",
+       " 'remained',\n",
+       " 'standing',\n",
+       " 'knee-deep',\n",
+       " 'in',\n",
+       " 'the',\n",
+       " 'heather',\n",
+       " 'staring',\n",
+       " 'at',\n",
+       " 'the',\n",
+       " 'mound',\n",
+       " 'that',\n",
+       " 'hid',\n",
+       " 'them',\n",
+       " 'I',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'battleground',\n",
+       " 'of',\n",
+       " 'fear',\n",
+       " 'and',\n",
+       " 'curiosity',\n",
+       " 'I',\n",
+       " 'did',\n",
+       " 'not',\n",
+       " 'dare',\n",
+       " 'to',\n",
+       " 'go',\n",
+       " 'back',\n",
+       " 'towards',\n",
+       " 'the',\n",
+       " 'pit',\n",
+       " 'but',\n",
+       " 'I',\n",
+       " 'felt',\n",
+       " 'a',\n",
+       " 'passionate',\n",
+       " 'longing',\n",
+       " 'to',\n",
+       " 'peer',\n",
+       " 'into',\n",
+       " 'it',\n",
+       " 'I',\n",
+       " 'began',\n",
+       " 'walking',\n",
+       " 'therefore',\n",
+       " 'in',\n",
+       " 'a',\n",
+       " 'big',\n",
+       " 'curve',\n",
+       " 'seeking',\n",
+       " 'some',\n",
+       " 'point',\n",
+       " 'of',\n",
+       " 'vantage',\n",
+       " 'and',\n",
+       " 'continually',\n",
+       " 'looking',\n",
+       " 'at',\n",
+       " 'the',\n",
+       " 'sand',\n",
+       " 'heaps',\n",
+       " 'that',\n",
+       " 'hid',\n",
+       " 'these',\n",
+       " 'new-comers',\n",
+       " 'to',\n",
+       " 'our',\n",
+       " 'earth',\n",
+       " 'Once',\n",
+       " 'a',\n",
+       " 'leash',\n",
+       " 'of',\n",
+       " 'thin',\n",
+       " 'black',\n",
+       " 'whips',\n",
+       " 'like',\n",
+       " 'the',\n",
+       " 'arms',\n",
+       " 'of',\n",
+       " 'an',\n",
+       " 'octopus',\n",
+       " 'flashed',\n",
+       " 'across',\n",
+       " 'the',\n",
+       " 'sunset',\n",
+       " 'and',\n",
+       " 'was',\n",
+       " 'immediately',\n",
+       " 'withdrawn',\n",
+       " 'and',\n",
+       " 'afterwards',\n",
+       " 'a',\n",
+       " 'thin',\n",
+       " 'rod',\n",
+       " 'rose',\n",
+       " 'up',\n",
+       " 'joint',\n",
+       " 'by',\n",
+       " 'joint',\n",
+       " 'bearing',\n",
+       " 'at',\n",
+       " 'its',\n",
+       " 'apex',\n",
+       " 'a',\n",
+       " 'circular',\n",
+       " 'disk',\n",
+       " 'that',\n",
+       " 'spun',\n",
+       " 'with',\n",
+       " 'a',\n",
+       " 'wobbling',\n",
+       " 'motion',\n",
+       " 'What',\n",
+       " 'could',\n",
+       " 'be',\n",
+       " 'going',\n",
+       " 'on',\n",
+       " 'there']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# place your code here"
+    "# place your code here\n",
+    "\n",
+    "punc = string.punctuation\n",
+    "\n",
+    "wellstext_list = wellstext.split()\n",
+    "\n",
+    "lst = []\n",
+    "\n",
+    "for word in wellstext_list:\n",
+    "    word = word.strip(punc)\n",
+    "    lst.append(word)\n",
+    "\n",
+    "lst"
    ]
   },
   {
@@ -169,11 +341,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "182 182\n"
+     ]
+    }
+   ],
    "source": [
-    "# put your code here"
+    "# put your code here\n",
+    "\n",
+    "import nltk\n",
+    "import re\n",
+    "\n",
+    "lewistext_list = nltk.word_tokenize(lewistext)\n",
+    "\n",
+    "stemmed_list = []\n",
+    "\n",
+    "for word in lewistext_list:\n",
+    "    if re.search(r\"(ing|ed|ion|s)$\", word) is not None:\n",
+    "        word = re.sub(r\"([A-Za-z]*)(ing|ed|ion|s)$\", r\"\\1\", word)\n",
+    "        stemmed_list.append(word)\n",
+    "    else:\n",
+    "        stemmed_list.append(word)\n",
+    "\n",
+    "print(len(stemmed_list), len(lewistext_list))"
    ]
   },
   {
@@ -244,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +458,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +754,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -572,7 +768,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
+   }
   }
  },
  "nbformat": 4,
