--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -393,11 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# space for your code here"
+    "# space for your code here\n",
+    "\n",
+    "import nltk\n",
+    "\n",
+    "the_medea = open(\"the_medea.txt\")\n",
+    "\n",
+    "medea = the_medea.read()\n",
+    "\n",
+    "medea_sents = nltk.sent_tokenize(medea)\n",
+    "\n",
+    "medea_words = nltk.word_tokenize(medea)"
    ]
   },
   {
@@ -754,7 +764,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -768,12 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "2c27904bfabd9e4a7f1d5f5dcc5d2a6d0fab6e51da12729af85e6eafdbb7b7a0"
-   }
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
